<resources>
    <string name="app_name">MindMate</string>
    <string name="date">04 maggio 2025</string>
    <string name="phrase_title">Frase del giorno</string>
    <string name="phrase_text">Concentrati su dove vuoi andare, non dove sei al momento!</string>
    <string name="phrase_text_past">Ogni giorno è una nuova opportunità per migliorare te stesso!</string>
    <string name="task_title">TASK DEL GIORNO</string>
    <string name="task1_title">Scrivi nel Diario</string>
    <string name="task1_desc">Come ti senti oggi?</string>
    <string name="task2_title">Respira con me</string>
    <string name="task2_desc">Gestisci l\'ansia col respiro</string>
    <string name="task3_title">Lasciati ispirare</string>
    <string name="task3_desc">Una storia o un video può motivarti!</string>
    <string name="obiettivi">Obiettivi</string>

    <string name="attivita_title">Attività fisica</string>
    <string name="attivita_subtitle">Scegli un\'attività per oggi</string>
    <string name="attivita_description">Puoi selezionare tra diverse opzioni, da yoga a corsa o passeggiate.</string>

    <string name="emoji1">😔</string>
    <string name="emoji2">😍</string>
    <string name="emoji3">😊</string>
    <string name="emoji4">😰</string>
    <string name="emoji5">😭</string>
    <string name="emoji6">🤔</string>
    <string name="emoji7">😡</string>
    <string name="emoji8">😴</string>
    <string name="emoji9">😅</string>
    <string name="hint_nota">Oggi mi sento abbastanza ansiosa perché ...</string>
    <string name="salva">Salva</string>
    <string name="nuova_nota_title">Nuova Nota</string>
    <string name="come_ti_senti">Come ti senti oggi?</string>
    <string name="logo_mindmate">Logo MindMate</string>
    <string name="respirazione_title">RESPIRAZIONE</string>
    <string name="respirazione_start">Premi Start per iniziare!</string>
    <string name="respirazione_inspira">Inspira 5 secondi...</string>
    <string name="respirazione_trattieni">Trattieni 5 secondi...</string>
    <string name="respirazione_espira">Espira 5 secondi...</string>
    <string name="respirazione_completato">Esercizio completato!</string>
    <string name="start">Start</string>
    <string name="indietro">Indietro</string>

    <!-- Card attività -->
    <string name="sessione_yoga">Yoga</string>
    <string name="ballare_in_casa">Ballare</string>
    <string name="cardio">Corsa</string>
    <string name="hiit">HIIT</string>
    <string name="pilates">Pilates</string>
    <string name="passeggiata_cane">Passeggiata col cane</string>
    <string name="giro_bici">Giro in bici</string>
    <string name="corsa_allenamento">Corsa allenamento</string>
    <string name="obiettivo_label">Obiettivo %1$d</string>
    <string name="titolo_video_principale">INARRESTABILE</string>
    <string name="titolo_video_correlato1">Perchè cadiamo</string>
    <string name="titolo_video_correlato2">Ritrova la tua vera forza, non arrenderti mai!</string>
    <string name="titolo_audio1">Andrea Giuliodori - Cosa ti impedisce di MIGLIORARE?</string>
    <string name="titolo_audio2">Gianluca Gotto - Come scegliere, ogni giorno, se stessi</string>
    <string name="titolo_audio3">One More Time - Paolo Crepet e gli psichiatri</string>
    <string name="video">Video</string>
    <string name="video_motivazioni">Video motivazioni</string>
    <string name="tira_su_il_morale">Tira su il morale!</string>
    <string name="audio_e_podcast">Audio e podcast</string>
    <string name="storie_ispirazione">Storie che ti potrebbero ispirare.</string>
    <string name="descrizione_copertina_video">Copertina video motivazionale</string>
    <string name="descrizione_play">Pulsante play</string>
    <string name="settings">Impostazioni</string>
    <string name="settings_title">IMPOSTAZIONI</string>
    <string name="privacy">Privacy</string>
    <string name="notifiche">Notifiche</string>
    <string name="tema">Tema</string>
    <string name="lingua">Lingua</string>
    <string name="spazio_e_dati">Spazio e dati</string>
    <string name="info">Info</string>
    <string name="back">&lt; Indietro</string>
</resources>
